--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -23,7 +23,7 @@
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Buttons/DefaultOptionPickerButtonStyle.xaml" />
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultSheenLabelStyle.xaml" />
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml" />
-                <ResourceDictionary Source="../../ResourceDictionaries/Styles/DefaultTooltipStyle.xaml" />
+                <ResourceDictionary Source="../../ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
@@ -137,7 +137,7 @@
                                         Content="Save"
                                         Command="{Binding SaveCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipStyle}" Content="Save and apply the current configuration." />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Save and apply the current configuration." />
                                     </Button.ToolTip>
                                 </Button>
                                 <Button Style="{StaticResource DefaultButtonStyle}"
@@ -146,7 +146,7 @@
                                         Content="Cancel"
                                         Command="{Binding CancelCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipStyle}" Content="Exit this window without applying or saving&#x0a;the configuration changes. (hotkey: ESC)" />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Exit this window without applying or saving&#x0a;the configuration changes. (hotkey: ESC)" />
                                     </Button.ToolTip>
                                 </Button>
                             </StackPanel>
