--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml
@@ -1,12 +1,13 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <Style x:Key="DefaultToolTipStyle" TargetType="ToolTip">
+    <Style x:Key="DefaultToolTipRightStyle" TargetType="ToolTip">
         <Setter Property="Background" Value="#354A5B" />
         <Setter Property="BorderBrush" Value="#4A9FC5" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="5" />
         <Setter Property="Placement" Value="Right" />
+        <Setter Property="HorizontalOffset" Value="5" />
         <Setter Property="Foreground" Value="#D6D6D8" />
         <Setter Property="FontSize" Value="12" />
     </Style>
