--- a/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/UserControls/HistoricEvolutionButton.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/UserControls/HistoricEvolutionButton.xaml
@@ -13,7 +13,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../../../ResourceDictionaries/Styles/Buttons/StretchContentButtonStyle.xaml" />
-                <ResourceDictionary Source="../../../ResourceDictionaries/Styles/DefaultTooltipStyle.xaml" />
+                <ResourceDictionary Source="../../../ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <conversion:DigimonTypeContainsMultiConverter x:Key="DigimonTypeMultiConverter" />
@@ -40,7 +40,7 @@
                         Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
                         CommandParameter="{Binding}">
                     <Button.ToolTip>
-                        <ToolTip Style="{StaticResource DefaultToolTipStyle}">
+                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}">
                             <TextBlock Text="{Binding DigimonType}" />
                         </ToolTip>
                     </Button.ToolTip>
