--- a/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/UserControls/JijimonNarrator.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/UserControls/JijimonNarrator.xaml
@@ -3,9 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:evolutionTool="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.EvolutionTool"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=evolutionTool:EvolutionToolViewModel, IsDesignTimeCreatable=True}">
+             mc:Ignorable="d">
 
     <Image Height="175"
            Source="/Images/Digimon/jijimon-narrator-left.png"
