--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:evolutionTool="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.EvolutionTool"
         xmlns:historicEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.HistoricEvolutionPicker"
-        xmlns:musicPlayer="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.MusicPlayer"
         xmlns:main="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main"
+        xmlns:musicPlayer1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MusicPlayer"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=main:MainWindowViewModel, IsDesignTimeCreatable=True}"
         Title="Digimon World Tool"
@@ -25,19 +25,8 @@
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <BitmapImage x:Key="ClosedLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-no-focus.png" />
-            <BitmapImage x:Key="OpenLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-focus.png" />
             <BitmapImage x:Key="ClosedBottomPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-bottom-no-focus.png" />
             <BitmapImage x:Key="OpenBottomPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-bottom-focus.png" />
-
-            <Style x:Key="LeftPaneLabelStyle" TargetType="Image">
-                <Setter Property="Source" Value="{StaticResource ClosedLeftPaneImage}" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                        <Setter Property="Source" Value="{StaticResource OpenLeftPaneImage}" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
 
             <Style x:Key="BottomPaneLabelStyle" TargetType="Image">
                 <Setter Property="Source" Value="{StaticResource ClosedBottomPaneImage}" />
@@ -47,15 +36,6 @@
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
-
-            <Storyboard x:Key="OpenLeftPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="12" Duration="0:0:0.3" />
-            </Storyboard>
-            <Storyboard x:Key="CloseLeftPane">
-                <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                 To="465" Duration="0:0:0.3" />
-            </Storyboard>
 
             <Storyboard x:Key="OpenBottomPane">
                 <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
@@ -87,10 +67,11 @@
         <Border Background="Transparent" Grid.Row="0" Grid.ColumnSpan="2" Height="50">
             <Grid Background="Transparent">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="15" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="795" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
@@ -99,7 +80,7 @@
 
                 <Button Grid.Column="1" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding OpenConfigurationWindowCommand}" IsTabStop="False">
                     <Button.ToolTip>
-                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Open the configuration window" />
+                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Open the configuration dialog" />
                     </Button.ToolTip>
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
@@ -140,7 +121,7 @@
 
                 <Button Grid.Column="2" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding OpenAboutAndCreditsWindowCommand}" IsTabStop="False">
                     <Button.ToolTip>
-                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Open the about and credits window" />
+                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Open the about and credits dialog" />
                     </Button.ToolTip>
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
@@ -179,7 +160,48 @@
                     </Button.Template>
                 </Button>
 
-                <Grid Grid.Column="4" Width="60" Height="50" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                <Button Grid.Column="3" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding OpenMusicPlayerWindowCommand}" IsTabStop="False">
+                    <Button.ToolTip>
+                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Open the musicplayer  window" />
+                    </Button.ToolTip>
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
+                                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
+                                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#2E3841">
+                                                <Border x:Name="InnerBorder" CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Background="#80000000" Opacity="0.5">
+                                                    <TextBlock Text="📻" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" FontWeight="Bold" Foreground="White" />
+                                                </Border>
+                                            </Border>
+                                        </Border>
+                                    </Border>
+                                </Border>
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <EventTrigger RoutedEvent="MouseEnter">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="InnerBorder" Storyboard.TargetProperty="Opacity"
+                                                             To="1.0" Duration="0:0:0.2" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                                <EventTrigger RoutedEvent="MouseLeave">
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="InnerBorder" Storyboard.TargetProperty="Opacity"
+                                                             To="0.5" Duration="0:0:0.2" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </EventTrigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <Grid Grid.Column="5" Width="60" Height="50" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
                     <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black"
                             ToolTipService.InitialShowDelay="750">
                         <Border.ToolTip>
@@ -219,7 +241,7 @@
                     </Grid.Triggers>
                 </Grid>
 
-                <Button Grid.Column="5" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding MinimizeCommand}" IsTabStop="False">
+                <Button Grid.Column="6" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding MinimizeCommand}" IsTabStop="False">
                     <Button.ToolTip>
                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Minimize the application" />
                     </Button.ToolTip>
@@ -260,7 +282,7 @@
                     </Button.Template>
                 </Button>
 
-                <Button Grid.Column="6" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding CloseCommand}" IsTabStop="False">
+                <Button Grid.Column="7" Width="60" Height="50" Background="Transparent" BorderBrush="Transparent" Command="{Binding CloseCommand}" IsTabStop="False">
                     <Button.ToolTip>
                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Close the application" />
                     </Button.ToolTip>
@@ -308,7 +330,7 @@
                 <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
-                            <evolutionTool:EvolutionToolUserControl />
+                            <evolutionTool:EvolutionToolUserControl x:Name="EvolutionToolUserControl" />
                         </Border>
                     </Border>
                 </Border>
@@ -387,85 +409,6 @@
                             </DataTrigger.EnterActions>
                             <DataTrigger.ExitActions>
                                 <BeginStoryboard Storyboard="{StaticResource CloseBottomPane}" />
-                            </DataTrigger.ExitActions>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-        </Grid>
-
-        <Grid Grid.Row="1" Grid.Column="0" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True" RenderTransformOrigin="0.5,0.5" Panel.ZIndex="0">
-            <Grid.RenderTransform>
-                <TranslateTransform X="465" />
-            </Grid.RenderTransform>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="45"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Border Grid.Row="1" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
-                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
-                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
-                        <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
-                            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10" Background="#2E3841">
-                                <musicPlayer:MusicPlayerUserControl VerticalAlignment="Center" />
-                            </Border>
-                        </Border>
-                    </Border>
-                </Border>
-            </Border>
-
-            <Grid Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Background="Transparent">
-                <Image Style="{StaticResource LeftPaneLabelStyle}" Margin="0,0, -2, 0">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleLeftPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Image>
-
-                <TextBlock Text="J&#xD;&#xA;u&#xD;&#xA;k&#xD;&#xA;e&#xD;&#xA;b&#xD;&#xA;o&#xD;&#xA;x"
-                           TextWrapping="Wrap"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           FontWeight="Bold"
-                           TextAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
-                            <Setter Property="FontWeight" Value="Bold" />
-                            <Setter Property="Foreground" Value="#D6D6D8" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                                    <Setter Property="Foreground" Value="Black" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="MouseLeftButtonDown">
-                            <b:InvokeCommandAction Command="{Binding ToggleLeftPaneCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </TextBlock>
-            </Grid>
-
-            <Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
-                            <DataTrigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource OpenLeftPane}" />
-                            </DataTrigger.EnterActions>
-                            <DataTrigger.ExitActions>
-                                <BeginStoryboard Storyboard="{StaticResource CloseLeftPane}" />
                             </DataTrigger.ExitActions>
                         </DataTrigger>
                     </Style.Triggers>
